# agent-godmode

./: .gitignore  README.md  pyproject.toml  server.json
src/agent_godmode/: __init__.py  __main__.py  _paths.py  agent.py  agent_workspace.py  config.py  prompts.py  schemas.py  server.py  tools.py
