[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-godmode"
version = "0.1.9"
description = "MCP server and library: read/write files, run commands, list files — with strict prompts for user-provided LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "agent-godmode contributors" }]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/mdvohra/agent-godmode"
Repository = "https://github.com/mdvohra/agent-godmode"

[project.scripts]
agent-godmode = "agent_godmode.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
